--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "webpack && node ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -15,24 +15,29 @@
     "mobx-react": "^4.1.8",
     "morgan": "~1.6.1",
     "path": "^0.12.7",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "antd-mobile": "^1.0.0",
+    "babel-runtime": "~6.11.6",
+    "moment": "^2.14.1",
+    "rc-form": "^0.17.2"
   },
   "devDependencies": {
+    "antd-mobile-demo-data": "^0.1.3",
+    "autoprefixer": "~6.5.1",
     "babel-core": "6.x",
     "babel-eslint": "7.x",
     "babel-loader": "6.x",
+    "babel-plugin-import": "~1.0.1",
     "babel-plugin-transform-runtime": "6.x",
+    "babel-polyfill": "~6.13.0",
     "babel-preset-es2015": "6.x",
     "babel-preset-react": "6.x",
     "babel-preset-stage-0": "6.x",
+    "bundle-loader": "^0.5.2",
     "commitizen": "^2.9.3",
     "conventional-changelog-cli": "1.x",
     "copy-webpack-plugin": "latest",
-    "css-loader": "~0.26.1",
+    "css-loader": "^0.19.0",
     "cz-conventional-changelog": "^1.2.0",
     "eslint": "latest",
     "eslint-config-airbnb": "latest",
@@ -42,12 +47,26 @@
     "eslint-plugin-jsx-a11y": "3.x",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "latest",
+    "extract-text-webpack-plugin": "~1.0.1",
     "husky": "^0.12.0",
+    "less": "~2.7.1",
+    "less-loader": "~2.2.3",
     "open-browser-webpack-plugin": "0.0.3",
-    "style-loader": "~0.13.1",
+    "postcss": "~5.2.5",
+    "postcss-loader": "~1.1.0",
+    "postcss-pxtorem": "~3.3.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "style-loader": "^0.12.4",
+    "svg-sprite-loader": "^0.2.0",
+    "url-loader": "~0.5.7",
     "validate-commit-msg": "2.x",
     "webpack": "1.x",
+    "webpack-bundle-analyzer": "^2.8.1",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": "1.x"
+    "webpack-dev-server": "1.x",
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
